# jem-it-indaba-chatbot

./: .dockerignore  .env.example  .gitignore  AI_GAME_README.md  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  pyproject.toml  quick_test.sh  requirements.txt  test_ai_game.sh  test_game_flow.sh  test_hackmerlin.sh  test_levels.sh
app/: analytics.py  config.py  database.py  game.py  level_configs.py  main.py  models.py  phones.py  postgres_store.py  redis_store.py  whatsapp.py
app/ai_game/: __init__.py  context.py  hackmerlin_filters.py  hackmerlin_prompts.py  prompts.py  state.py  workflow.py  workflow_hackmerlin.py
app/ai_game/models/: __init__.py  groq_client.py  sales_model.py
app/ai_game/nodes/: __init__.py  evaluation_node.py  response_node.py  sales_conversation_node.py  self_evaluation_node.py  sender_node.py  update_state_node.py
app/security/: __init__.py  webhook_verification.py
app/services/: button_handler.py  game_service.py  message_formatter.py  session_service.py
app/webhook/: __init__.py  handlers.py
docs/: api.md  architecture.md  deployment.md
infra/: Pulumi.yaml  __main__.py
